[project]
name = "agent-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "datasets==3.6.0",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "gradio>=6.16.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter-dash>=0.4.2",
    "jupyterlab>=4.5.8",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.10.9",
    "modal>=1.4.3",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "protobuf==3.20.2",
    "psutil>=7.2.2",
    "pydub>=0.25.1",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.1",
    "setuptools>=82.0.1",
    "speedtest-cli>=2.1.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.10.2",
    "wandb>=0.25.0",
]
